added changes to auth page

--- a/src/components/css/btn.css
+++ b/src/components/css/btn.css
@@ -22,7 +22,7 @@
 }
 .btn-secondary-thin{
     padding: 10px 20px;
-    /* margin: 10px 10px; */
+    margin: 10px 0px;
     font-family: "Ubuntu", sans-serif;
     font-size: 1rem;
     background-color: #6B63FF;
